fixed css on tables

--- a/app/equipmentValidation.html
+++ b/app/equipmentValidation.html
@@ -121,7 +121,7 @@
                       <div id="equipment">
                         <div class="equipmentCol" data-hotspot="5">
                           <div class="equipmentHeader">
-                            <h2>Hotspot 1</h2>
+                            <h2>Entrada</h2>
                           </div>
                           <div class="equipmentcell" data-brand="Heineken" data-type="towel" data-id="1">
                             <img src="https://retail.propelbi.com/images/equipments/88012351.jpg" alt="">
@@ -139,7 +139,7 @@
 
                         <div class="equipmentCol" data-hotspot="5">
                           <div class="equipmentHeader">
-                            <h2>Hotspot 2</h2>
+                            <h2>Gondola</h2>
                           </div>
                           <div class="equipmentcell" data-brand="Heineken" data-type="stand" data-id="1">
                             <img src="https://retail.propelbi.com/images/equipments/HK131490.jpg" alt="">
@@ -154,7 +154,7 @@
 
                         <div class="equipmentCol" data-hotspot="5">
                           <div class="equipmentHeader">
-                            <h2>Hotspot 2</h2>
+                            <h2>Bar</h2>
                           </div>
                           <div class="equipmentcell" data-brand="Stolichnaya" data-type="condiment tray" data-id="2">
                             <img src="https://retail.propelbi.com/images/equipments/461.jpg" alt="">
@@ -169,7 +169,70 @@
 
                         <div class="equipmentCol" data-hotspot="5">
                           <div class="equipmentHeader">
-                            <h2>Hotspot 2</h2>
+                            <h2>Bar</h2>
+                          </div>
+                          <div class="equipmentcell" data-brand="Buchanans" data-type="tray" data-id="5">
+                            <img src="https://retail.propelbi.com/images/equipments/470.jpg" alt="">
+                          </div>
+                          <div class="equipmentcell" data-brand="Buchanans" data-type="ice becket" data-id="4">
+                            <img src="https://retail.propelbi.com/images/equipments/471.jpg" alt="">
+                          </div>
+                          <div class="equipmentcell" data-brand="Heineken" data-type="poster" data-id="6">
+                            <img src="https://retail.propelbi.com/images/equipments/Q191.jpg" alt="">
+                          </div>
+                        </div>
+
+                        <div class="equipmentCol" data-hotspot="5">
+                          <div class="equipmentHeader">
+                            <h2>Hotspot</h2>
+                          </div>
+                          <div class="equipmentcell" data-brand="Heineken" data-type="towel" data-id="1">
+                            <img src="https://retail.propelbi.com/images/equipments/88012351.jpg" alt="">
+                          </div>
+                          <div class="equipmentcell" data-brand="Heineken" data-type="bar" data-id="1">
+                            <img src="https://retail.propelbi.com/images/equipments/241.jpg" alt="">
+                          </div>
+                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="bar" data-id="1">
+                            <img src="https://retail.propelbi.com/images/equipments/451.jpg" alt="">
+                          </div>
+                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="bar">
+                            <img src="https://retail.propelbi.com/images/equipments/453.jpg" alt="">
+                          </div>
+                        </div>
+
+                        <div class="equipmentCol" data-hotspot="5">
+                          <div class="equipmentHeader">
+                            <h2>Table</h2>
+                          </div>
+                          <div class="equipmentcell" data-brand="Heineken" data-type="stand" data-id="1">
+                            <img src="https://retail.propelbi.com/images/equipments/HK131490.jpg" alt="">
+                          </div>
+                          <div class="equipmentcell" data-brand="Heineken" data-type="table-stand" data-id="1">
+                            <img src="https://retail.propelbi.com/images/equipments/88010233.jpg" alt="">
+                          </div>
+                          <div class="equipmentcell" data-brand="Johnny Walker Black Label" data-type="poster" data-id="1">
+                            <img src="https://retail.propelbi.com/images/equipments/454.jpg" alt="">
+                          </div>
+                        </div>
+
+                        <div class="equipmentCol" data-hotspot="5">
+                          <div class="equipmentHeader">
+                            <h2>Entrada</h2>
+                          </div>
+                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="condiment tray" data-id="2">
+                            <img src="https://retail.propelbi.com/images/equipments/461.jpg" alt="">
+                          </div>
+                          <div class="equipmentcell" data-brand="Stolichnaya" data-type="bar mat" data-id="2">
+                            <img src="https://retail.propelbi.com/images/equipments/462.jpg" alt="">
+                          </div>
+                          <div class="equipmentcell" data-brand="Johnny Walker Black Label" data-type="bar mat" data-id="3">
+                            <img src="https://retail.propelbi.com/images/equipments/464.jpg" alt="">
+                          </div>
+                        </div>
+
+                        <div class="equipmentCol" data-hotspot="5">
+                          <div class="equipmentHeader">
+                            <h2>Mesas</h2>
                           </div>
                           <div class="equipmentcell" data-brand="Buchanans" data-type="tray" data-id="5">
                             <img src="https://retail.propelbi.com/images/equipments/470.jpg" alt="">
