--- a/app/home.html
+++ b/app/home.html
@@ -183,7 +183,7 @@
                               <tbody>
                                 <tr data-id="0">
                                   <td>
-                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">400141 || Heineken Green 6 pack 12. oz. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">382493 || Grey Goose Vodka 750 ml. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
                                     <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
@@ -198,7 +198,112 @@
 
                                 <tr data-id="1">
                                   <td>
-                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">500140 || HEINEKEN LIGHT 12OZ SS <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">382493 || Stolichnaya 750 ML <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
+                                  </td>
+                                </tr>
+
+                                <tr data-id="1">
+                                  <td>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">8112807408 || Finlandia Vodka 1lt <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
+                                  </td>
+                                </tr>
+
+                                <tr data-id="0">
+                                  <td>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">382493 || Grey Goose Vodka 750 ml. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$8</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">2 X $4.00</span>
+                                  </td>
+                                </tr>
+
+                                <tr data-id="1">
+                                  <td>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">382493 || Stolichnaya 750 ML <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
+                                  </td>
+                                </tr>
+
+                                <tr data-id="1">
+                                  <td>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">8112807408 || Finlandia Vodka 1lt <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
+                                  </td>
+                                </tr>
+
+                                <tr data-id="0">
+                                  <td>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">382493 || Grey Goose Vodka 750 ml. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$8</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">2 X $4.00</span>
+                                  </td>
+                                </tr>
+
+                                <tr data-id="1">
+                                  <td>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">382493 || Stolichnaya 750 ML <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2.85</span>
+                                  </td>
+                                  <td>
+                                    <span style="padding-left:35px;" class="label label-flat text-primary-600"><img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">3 X $4.00</span>
+                                  </td>
+                                </tr>
+
+                                <tr data-id="1">
+                                  <td>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">8112807408 || Finlandia Vodka 1lt <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
                                     <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
@@ -227,7 +332,7 @@
                               <tbody>
                                 <tr data-id="0">
                                   <td>
-                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">400141 || Heineken Green 6 pack 12. oz. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">400141 || Stolichnaya 1 LT. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
                                     <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$7</span>
@@ -242,7 +347,7 @@
 
                                 <tr data-id="1">
                                   <td>
-                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">500140 || HEINEKEN LIGHT 12OZ SS <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
+                                    <span style="padding-right:35px;" class="label label-flat text-primary-600">500140 || Ciroc 1Lt. <img src="./app/img/War-Cross-Mark-PNG-Picture.png"></span>
                                   </td>
                                   <td>
                                     <span style="padding-left:35px;" class="label label-flat text-primary-600"> <img style="left:0;" src="./app/img/War-Cross-Mark-PNG-Picture.png">$2</span>
