--- a/app/planificasionPicos.html
+++ b/app/planificasionPicos.html
@@ -145,17 +145,21 @@
                               <tr>
                                 <th>Last Reviewed</th>
                                 <th>Client</th>
-                                <th>PICOS Classification</th>
-                                <th>Assortment & Price SKU's</th>
-                                <th>Hotspots to Active</th>
-                                <th>Equipment to place</th>
+                                <th>PICOS</th>
+                                <th>SKU's</th>
+                                <th>Hotspots</th>
+                                <th>Equipment</th>
                                 <th>To PICOS</th>
                               </tr>
                             </thead>
 
                             <tbody>
                               <tr class="error" data-id="0">
-                                <td>2017-01-06 - 5:56am</td>
+                                <td>
+                                  2017-01-06
+                                  <hr>
+                                  5:56am
+                                </td>
                                 <td>125654 - Pueblo</td>
                                 <td>G S S</td>
                                 <td class="danger">15</td>
@@ -166,7 +170,11 @@
                                 </td>
                               </tr>
                               <tr data-id="0">
-                                <td>2017-01-06 - 4:16pm</td>
+                                <td>
+                                  2017-01-06
+                                  <hr>
+                                  5:56am
+                                </td>
                                 <td>125654 - Pueblo</td>
                                 <td>S G B</td>
                                 <td>15</td>
@@ -178,7 +186,11 @@
                               </tr>
 
                               <tr data-id="0">
-                                <td>2017-01-06 - 6:16am</td>
+                                <td>
+                                  2017-01-06
+                                  <hr>
+                                  5:56am
+                                </td>
                                 <td>125654 - Pueblo</td>
                                 <td>B B G</td>
                                 <td>15</td>
@@ -190,8 +202,16 @@
                               </tr>
 
                               <tr class="error" data-id="0">
-                                <td>2017-01-06 - 3:32pm</td>
-                                <td>125654 - Pueblo</td>
+                                <td>
+                                  2017-01-06
+                                  <hr>
+                                  5:56am
+                                </td>
+                                <td>
+                                  125654 - Pueblo
+                                  <hr>
+                                  Plaza Las Americas
+                                </td>
                                 <td>S B S</td>
                                 <td class="danger">15</td>
                                 <td>10</td>
@@ -202,7 +222,11 @@
                               </tr>
 
                               <tr class="error" data-id="0">
-                                <td>2017-01-06 - 1:52pm</td>
+                                <td>
+                                  2017-01-06
+                                  <hr>
+                                  5:56am
+                                </td>
                                 <td>125654 - Pueblo</td>
                                 <td>G G S</td>
                                 <td class="danger">15</td>
