--- a/app/equipmentValidation.html
+++ b/app/equipmentValidation.html
@@ -104,14 +104,14 @@
                     <div class="panel-heading">
         							<h5 class="panel-title">Equipment Validation: Pueblo</h5>
                       <div class="calculations">
-                        <h5>You have <span id="selected">40</span> out <span id="total">50</span> compleated</h5>
+                        <h5>You have <span id="selected">40</span> out <span id="total">50</span> Completed</h5>
                         <div id="myTest" style="width:60px; height:60px; position: absolute; right: 0px; top: 0;">
 
                         </div>
                       </div>
                       <hr>
                       <div class="text-right">
-                        <button type="submit" class="btn btn-primary" href="#">Compleat Validation <i class="icon-checkmark4 position-right"></i></button>
+                        <button type="submit" class="btn btn-primary" href="#">Complete Validation <i class="icon-checkmark4 position-right"></i></button>
                       </div>
                       <input id="inputBrand" type="text" class="inputText form-control" style="width: 350px; float:left; margin-right:20px;" placeholder="Brand:">
                       <input id="inputEquipment" type="text" class="inputText form-control" style="width: 350px;" placeholder="Equipment Type:">
