--- a/app/home.html
+++ b/app/home.html
@@ -106,14 +106,14 @@
                     <div class="panel-heading">
         							<h5 class="panel-title">Product Validation: Pueblo</h5>
                       <div class="calculations">
-                        <h5>You have <span id="selected">40</span> out <span id="total">50</span> compleated</h5>
+                        <h5>You have <span id="selected">40</span> out <span id="total">50</span> Completed</h5>
                         <div id="myTest" style="width:60px; height:60px; position: absolute; right: 0px; top: 0;">
 
                         </div>
                       </div>
                       <hr>
                       <div class="text-right">
-                        <button type="submit" class="btn btn-primary" href="#">Compleat Validation <i class="icon-checkmark4 position-right"></i></button>
+                        <button type="submit" class="btn btn-primary" href="#">Complete Validation <i class="icon-checkmark4 position-right"></i></button>
                       </div>
                     </div>
                     <div class="panel-body">
