--- a/app/planificasionPicos.html
+++ b/app/planificasionPicos.html
@@ -136,7 +136,7 @@
                         </div>
 
                         <div class="text-right" style="margin-top:10px; margin-right:10px;">
-                          <button type="submit" class="btn btn-primary" href="#">Compleat Planning <i class="icon-checkmark4 position-right"></i></button>
+                          <button type="submit" class="btn btn-primary" href="#">Complete Planning <i class="icon-checkmark4 position-right"></i></button>
                         </div>
 
                         <div class="panel-body">
