--- a/app/home.html
+++ b/app/home.html
@@ -74,7 +74,7 @@
             <li><i class="icon-home2 position-left"></i><a href="/app/profilePage.html">Profile Page</a></li>
             <li><a href="/app/home.html">Sales Validation</a></li>
             <li><a href="/app/equipmentValidation.html">Equipment Objective</a></li>
-            <li><a href="/app/planificasionPicos.html">Planificasion Picos</a></li>
+            <li><a href="/app/planificasionPicos.html">PICOS Planning</a></li>
         	</ul>
           <a class="breadcrumb-elements-toggle"><i class="icon-menu-open"></i></a>
         </div>
@@ -106,7 +106,7 @@
                     <div class="panel-heading">
         							<h5 class="panel-title">Product Validation: Pueblo</h5>
                       <div class="calculations">
-                        <h5>You have <span id="selected">40</span> out <span id="total">50</span> Completed</h5>
+                        <h5>You have <span id="selected">40</span> out of <span id="total">50</span> completed</h5>
                         <div id="myTest" style="width:60px; height:60px; position: absolute; right: 0px; top: 0;">
 
                         </div>
