--- a/app/planificasionPicos.html
+++ b/app/planificasionPicos.html
@@ -73,7 +73,7 @@
             <li><i class="icon-home2 position-left"></i><a href="/app/profilePage.html">Profile Page</a></li>
             <li><a href="/app/home.html">Sales Validation</a></li>
             <li><a href="/app/equipmentValidation.html">Equipment Objective</a></li>
-            <li><a href="/app/planificasionPicos.html">Planificasion Picos</a></li>
+            <li><a href="/app/planificasionPicos.html">PICOS Planning</a></li>
           </ul>
           <a class="breadcrumb-elements-toggle"><i class="icon-menu-open"></i></a>
         </div>
