--- a/app/profilePage.html
+++ b/app/profilePage.html
@@ -73,7 +73,7 @@
           <li><i class="icon-home2 position-left"></i><a href="/app/profilePage.html">Profile Page</a></li>
           <li><a href="/app/home.html">Sales Validation</a></li>
           <li><a href="/app/equipmentValidation.html">Equipment Objective</a></li>
-          <li><a href="/app/planificasionPicos.html">Planificasion Picos</a></li>
+          <li><a href="/app/planificasionPicos.html">PICOS Planning</a></li>
         </ul>
         <a class="breadcrumb-elements-toggle"><i class="icon-menu-open"></i></a>
       </div>
@@ -109,10 +109,6 @@
                         <div class="panel-body">
                           <div class="imageContainer">
                             <img src="./app/img/clients-mendez-company.jpg" alt="">
-                            <div class="storeTypesProfile">
-                              <h3>Your store types:</h3>
-                              <p>Cash & Carry, C-Store, Military, Modern Trade, Pharmacy, Traditional Off</p>
-                            </div>
                           </div>
                         </div>
 
