--- a/app/equipmentValidation.html
+++ b/app/equipmentValidation.html
@@ -104,7 +104,7 @@
                     <div class="panel-heading">
         							<h5 class="panel-title">Equipment Validation: Pueblo</h5>
                       <div class="calculations">
-                        <h5>You have <span id="selected">40</span> out <span id="total">50</span> Completed</h5>
+                        <h5>You have <span id="selected">40</span> out of<span id="total">50</span> Completed</h5>
                         <div id="myTest" style="width:60px; height:60px; position: absolute; right: 0px; top: 0;">
 
                         </div>
